准备 地图功能

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -10,7 +10,15 @@
     ],
     "requestPermissions": [
       {
-        "name": "ohos.permission.INTERNET"
+        "name": "ohos.permission.INTERNET",
+      },{
+        "name": 'ohos.permission.LOCATION'
+      },
+      {
+        "name": 'ohos.permission.APPROXIMATELY_LOCATION'
+      },
+      {
+        "name": 'ohos.permission.LOCATION_IN_BACKGROUND'
       }
     ],
     "deliveryWithInstall": true,
