--- a/oh-package.json5
+++ b/oh-package.json5
@@ -6,6 +6,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "dayjs": "^1.11.7"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.6"
